# honeypot-detector

./: .env.example  .gitignore  Cargo.toml  NEXT_STEPS.md  PHASE6_SUMMARY.md  README.md  STRESS_TEST_REPORT.md  config.env  config.toml  honeypot-detector.sh  stress_test.sh
docs/: IMPLEMENTATION_COMPLETE.md  README.md
docs/agentic-context/: API_KEY_TEST_RESULTS.md  CLAUDE_CAPABILITIES.md  IMPLEMENTATION_PROGRESS.md  INTEGRATION_COMPLETE.md  ORGANIZATION_COMPLETE.md  PHASE6_COMPLETE.md  QUICK_REFERENCE.md  README.md  TEST_ORGANIZATION.md  TEST_RESULTS.md
docs/user-guides/: CLAUDE_INTEGRATION.md  POOL_TRACKER_USAGE.md  README.md
examples/: batch_check_tokens.rs  batch_full_honeypot_check.rs  test_admin.rs  test_admin_detection.rs  test_admin_risky_token.rs  test_approved_holder.rs  test_mcp_handshake.rs  test_single_holder.rs  test_swap.rs
honeypot-detector-v1/: README.md  honeypot-detector.sh
mcp-server/: analyze-token.ts  honeypot-tools.ts  package-lock.json  package.json  test-comprehensive.ts  test-honeypot-detection.ts  test-tools.ts  tsconfig.json
prompts/: deep_mode.md  hybrid_mode.md  quick_mode.md  static_analysis_review.md  system_prompt.md
scripts/: check_pool_state.sh  monitor_batch.sh
src/: lib.rs  main.rs
src/analyzers/: claude_analyzer.rs  mcp_client.rs  ml_analyzer.rs  mod.rs  simulator.rs  static_analyzer.rs
src/blockchain/: client.rs  ethers_db.rs  explorer.rs  mod.rs
src/contracts/: erc20.rs  mod.rs  pulsex_factory.rs  pulsex_pair.rs  pulsex_router.rs
src/core/: detector.rs  (+2 more)
tests/: test_claude_analyzer.rs  test_ethers_db.rs
(+24 files in other folders)
