[package]
name = "honeypot-detector"
version = "0.1.0"
edition = "2021"

[dependencies]
# EVM & Blockchain
revm = { version = "3.5", features = ["std", "serde"] }
revm-primitives = "1.3"
ethers = { version = "2.0", features = ["rustls"] }

# ML Inference (optional)
ort = { version = "1.16", optional = true }
ndarray = { version = "0.15", optional = true }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
hex = "0.4"
once_cell = "1.19"

# Caching
sled = "0.34"

# CLI
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenv = "0.15"
config = "0.13"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
ml-inference = ["dep:ort", "dep:ndarray"]